src/components/CoffeeSelection/styles.module.scss
.optionsContainer {

  width: 85%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap: wrap;
  align-items: center;

  .option {

    min-width: 15%;
    margin: 0 30px;

  }

  span {

    margin: 7px;
    display: block;
    font-size: 24px;
    font-weight: 300;

  }

  .sublabel {

    font-size: 12px;
    font-weight: 500;

  }

  .imgContainer {

    min-height: 200px;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    padding: 0 0 30px 0;

    img {

      width: 100%;

    }

  }

  .dotEmpty, .dotFilled {

    height: 36px;
    width: 36px;
    margin: 30px;
    background-color: none;
    border-radius: 50%;
    display: inline-block;
    border: 1px solid $secondary;
    transition: 0.2s;
    transition-property: color background-color;
    cursor: pointer;

  }

  .dotFilled {

    background-color: $secondary;

  }

  .dotEmpty {

    &:hover {

      background-color: $secondary;

    }

  }

  .dotFilled {

    &:hover {
      cursor: default;
    }

  }

}

:global(.box1) {

  max-width: 50%;

}

